--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
-a {
-    background-color: blueviolet;
+.button-class {
+    background-color: green;
+    border: none;
+    color: white;
+    padding: 16px x 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
 }
