--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,89 @@
-.button-class {
-    background-color: green;
-    border: none;
-    color: white;
-    padding: 40px x 40px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 4px 2px;
-}
-html, 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Work Sans", sans-serif;
+  background-color: #b4eeb4;
+  font-weight: 400;
+  font-size: 16px;
+  max-width: 1160px;
+  display: flex;
+  padding: 20px;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+  }
+
+  .pokemon-list {
+    list-style: none;
+    padding: 20px;
+  }
+
+.button-class {
+  background-color: #b07fff;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
 }
 
 #modal-container {
-  display: none;
+display: none;
 }
 
 #modal-container.is-visible {
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  
-  /* to show it above other content */
-  z-index: 999; 
-  
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto; 
-  
-  /* this is used to center the modal */
-  display: grid;
-  text-align: center;
+position: fixed;
+padding: 20px;
+box-sizing: border-box; /* displays the modal in the center of a mobile device*/
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color:rgb(0,0,0,0.5);
+display: grid;
+text-align: center;
 }
 
 .modal {
-  margin: auto;
-  display: inline-block;
-  box-sizing: border-box;
-  background: #fff;
-  padding: 15px;
-  width: 100%;
-  max-width: 700px;
-  text-align: left;
+margin: auto;
+display: inline-block;
+box-sizing: border-box;
+padding: 15px;
+width: 100%;
+max-width: 700px;
+background-color: white;
+font-weight: bold;
+border-radius: 20px ;
 }
 
 .modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: #777;
-  text-decoration: underline;
+float: right;
+border: 0;
+background: none;
+color: #777;
+text-decoration: underline;
+border-radius: 10px;
 }
 
 .modal h1 {
   margin-top: 0;
 }
-
 .modal p {
   margin-bottom: 0;
 }
 
+ul {
+  columns: 4;
+}
+
+img {
+  width: 150px;
+  height: 150px;
+}
+
+@media all and (max-width: 500px) {
+  ul {
+    columns: 2;
+  }
+  }
