--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,100 @@
-body {
-  background: black;
+/* -- header elements */
+
+.page-header {
+  padding: 50px;
 }
-.pokemon-list {
-    list-style: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-.list-group-item {
-    border: none;
-    text-align: center;
-  }
-.btn {
-    width: 150px;
-  }
-img {
-    width: 200px;
-    height: 200px;
-  }
-.modal-body {
-    text-align: center;
-  }
-.container {
-    margin-top: 50px;
-  }
-.collapse {
-    justify-content: right;
-  }
+
 .navbar {
-    background-color: lightcoral;
-  }
-.list-group-item {
-    background-color: black;
-  }
-  
-@media all and (max-width: 550px) {
-.pokemon-list {    
-    grid-template-columns: 1fr 1fr;
-}};
+background-color: #FF0000;
+padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.navbar-brand {
+margin-left: 3vw;
+}
+
+.navbar-toggler {
+margin-right: 3vw;
+}
+
+/*-- main elements */
+
+.pokemon-list {
+margin-top: 60px;
+margin-left: 50px;
+margin-right: 50px;
+}
+
+
+li.group-list-item {
+margin-bottom: 15px;
+}
+
+.btn,
+.name-element,
+.types-element {
+text-transform: capitalize;
+}
+
+
+.group-list-item{
+display: flex;
+justify-content: center;
+}
+
+/*--modal elements*/
+
+.modal-content{
+margin-top: 5vh;
+}
+
+.modal-title{
+color: #FFCB05;
+}
+
+.modal-header {
+border: none;
+background-color: #303030;
+}
+.modal-body {
+display: flex;
+flex-direction: column;
+border-left: 6px solid #303030;
+border-right: 6px solid #303030;
+}
+
+.modal-img {
+height: 200px;
+width: 200px;
+margin-top: 20px;
+margin-bottom: 40px;
+align-self: center;
+}
+
+.modal-footer{
+border-left: 6px solid #303030;
+border-right: 6px solid #303030;
+border-bottom: 6px solid #303030;
+border-top: none;
+}
+
+.btn-close {
+color: #343198;
+}
+
+
+/*-- Go to top button*/
+#btn-back-to-top {
+position: fixed;
+  bottom: 20px;
+  right: 25px;
+  background-color: #343198;
+  border: none;
+  border-radius: 50%;
+}
+
+
+.bi-caret-up-fill{
+color: #fdc109;
+}
