--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ color: #343198;
 
 
 /*-- Go to top button*/
-#btn-back-to-top {
+#btn-go-to-top {
 position: fixed;
   bottom: 20px;
   right: 25px;
