--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ margin-right: 3vw;
 
 .btn-warning {
   color: #212529;
-  background-color: rgb(0,123,255,0.5);
+  background-color: #007BFF80;
 }
 
 .pokemon-list {
@@ -93,14 +93,13 @@ font-weight: bold;
 
 /*-- Go to top button*/
 #btn-back-to-top {
-position: fixed;
+  position: fixed;
   bottom: 20px;
   right: 25px;
   background-color: #343198;
   border: none;
   border-radius: 50%;
 }
-
 
 .bi-caret-up-fill{
 color: #fdc109;
