--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ font-weight: bold;
   position: fixed;
   bottom: 20px;
   right: 25px;
+  scroll-behavior: smooth;
   background-color: #00BCD4;
   border: none;
   border-radius: 20%;
